schema/testdata/errors/attribute_unique.keel
model Person {
    fields {
        firstName Text
        lastName Text
    }

    //expect-error:13:24:E016:Invalid value, expected at least two field names to be provided
    @unique([firstName])

    //expect-error:5:12:E024:2 argument(s) provided to @unique but expected 1
    @unique(
        firstName,
        lastName
    )

    //expect-error:25:32:E016:Invalid value, expected any of the following identifiers - firstName, or lastName
    @unique([firstName, surname])
}
